--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,41 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+ @media screen and (max-width: 480px) {
+    .row{
+        flex-direction: column;
+        width: 100%;
+    }
+    .container{
+        width: 90%;
+        margin: 0 auto;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .lessons .col,
+    .steps .col,
+    .why-us .col-left,
+    .why-us .col-right{
+        width: 100%;
+    }
+    .col .card{
+        margin-bottom: 4rem;
+    }
+    .why-us{
+        background-color: #222222;
+    }
+    .steps{
+        margin-bottom: 0rem;
+        padding-bottom: 0rem;
+        margin-top: 0rem;
+    }
+    .why-us{
+        margin-bottom: 0rem;
+        padding-bottom: 3rem;
+        padding-top: 3rem;
+    }
+    .why-us .col-left{
+        margin-bottom: 3rem;
+    }
+ }
