--- a/css/style.css
+++ b/css/style.css
@@ -174,3 +174,12 @@ img {
         padding-right: 0;
     }
  }
+
+ @media screen and (min-width: 769px) and (max-width: 1160px){
+    .container{
+        width: 95%;
+        max-width: 1160px;
+        margin: 0 auto;
+    }
+ }
+    
